--- a/doc/fr_FR/index.asciidoc
+++ b/doc/fr_FR/index.asciidoc
@@ -30,3 +30,25 @@ Puis définir :
 image::../images/menu.jpg[align="center"]
 image::../images/IPX800.jpg[align="center"]
 image::../images/config_push.jpg[align="center"]
+
+== Change log ==
+
+1.26 Prise en charge des compteurs indépendament des boutons
+Ajout du nombre d'impulsion par minute
+Ajout d'une information status
+
+1.24 Redéclanchement jusqu'à 3 fois en cas d'indispo de l'IPX
+
+1.18 Prise en compte des extensions x800 et x400
+
+1.15 Correction pour la reception des push pour les entrées numeric
+
+1.13 Prise en compte des unitées pour les entrées analogiques
+
+1.12 Correction de la cron pour ne prendre que les changements d'état.
+
+1.11 Possibilité de configurer le push que sur certaines entrées.
+
+1.09 Ajout des formules pour les entrée analogiques
+
+1.1 Ajout all on et all off
