--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -1,30 +1,30 @@
 [horizontal]
-1.31:: Supression de l'info updatetime
+1.31:: Supression de l'info `updatetime`.
 
-1.30:: Ajout des Pince 50A  
+1.30:: Ajout des pinces 50A  .
 
-1.29::Ajout de Correction automatique par rapport au seuil Min et Max
+1.29:: Ajout de Correction automatique par rapport au seuil Min et Max.
 
-1.28::Ajout de lien vers les options d'affichage
+1.28:: Ajout de lien vers les options d'affichage.
 
-1.27::Correction de double cron
+1.27:: Correction de double cron.
 
-1.26::Prise en charge des compteurs indépendament des boutons
-Ajout du nombre d'impulsion par minute
-Ajout d'une information status
+1.26:: Prise en charge des compteurs indépendament des boutons.
+Ajout du nombre d'impulsions par minute.
+Ajout d'une information status.
 
-1.24::Redéclanchement jusqu'à 3 fois en cas d'indispo de l'IPX
+1.24:: Redéclenchement jusqu'à 3 fois en cas d'indispo de l'IPX.
 
-1.18::Prise en compte des extensions x800 et x400
+1.18:: Prise en compte des extensions x800 et x400.
 
-1.15::Correction pour la reception des push pour les entrées numeric
+1.15:: Correction pour la réception des push pour les entrées numériques.
 
-1.13::Prise en compte des unitées pour les entrées analogiques
+1.13:: Prise en compte des unitées pour les entrées analogiques.
 
-1.12::Correction de la cron pour ne prendre que les changements d'état.
+1.12:: Correction de la cron pour ne prendre que les changements d'état.
 
-1.11::Possibilité de configurer le push que sur certaines entrées.
+1.11:: Possibilité de configurer le push que sur certaines entrées.
 
-1.09::Ajout des formules pour les entrée analogiques
+1.09:: Ajout des formules pour les entrée analogiques.
 
-1.1::Ajout all on et all off
+1.1:: Ajout `all on` et `all off`.
