--- a/doc/fr_FR/index.asciidoc
+++ b/doc/fr_FR/index.asciidoc
@@ -4,16 +4,17 @@ Ce plugin permet de gérer les cartes IPX800 de GCE.
 Initialement, ce plugin a été créé pour connecter les IPX800 de GCE.
 
 === Données visibles sur le Dashboard : ===
-* '''les entrée analogiques '''
-* '''les entrée numeriques '''
-* '''les relai '''
+* '''les entrées analogiques '''
+* '''les entrées numeriques '''
+* '''les relais '''
 * '''les compteurs d'impulsions'''
+
 == Installation/Paramétrage ==
 Nous allons maintenant paramétrer un équipement. Pour se faire, cliquer sur '''Plugins / Protocole domotique / IPX800'''
 
 Puis cliquer sur le bouton en haut à gauche "'''Ajouter un équipement'''"
 
-Puis saisir le nom de l'équipement (ex. IPX 1)
+Puis saisir le nom de l'équipement (ex. IPX 1).
 
 Puis définir :
 
@@ -27,7 +28,7 @@ Puis définir :
 * '''Mot de passe'''
 
 === Frequence de rafraichissement ===
-Pour les entrées analogiques et les compteurs, les données récupéré par le plugin le sont toutes les minutes. Impossible de faire plus fréquent.
+Pour les entrées analogiques et les compteurs, les données sont récupérées par le plugin toutes les minutes. Il n'est pas possible d'avoir une fréquence plus élevée.
 Pour le reste, si le mode push est activé, le rafraichissement est quasi instantané.
 
 == Quelques copies d'écran ==
