--- a/doc/fr_FR/index.asciidoc
+++ b/doc/fr_FR/index.asciidoc
@@ -4,36 +4,46 @@ Ce plugin permet de gérer les cartes IPX800 de GCE.
 Initialement, ce plugin a été créé pour connecter les IPX800 de GCE.
 
 === Données visibles sur le Dashboard : ===
-* '''les entrée analogiques '''
-* '''les entrée numeriques '''
-* '''les relai '''
-* '''les compteurs d'impulsions'''
-== Installation/Paramétrage ==
-Nous allons maintenant paramétrer un équipement. Pour se faire, cliquer sur '''Plugins / Protocole domotique / IPX800'''
+* ''les entrée analogiques''
+* ''les entrée numeriques''
+* ''les relai''
+* ''les compteurs d'impulsions''
 
-Puis cliquer sur le bouton en haut à gauche "'''Ajouter un équipement'''"
+== Installation/Paramétrage ==
+Nous allons maintenant paramétrer un équipement. Pour se faire, cliquer sur ''Plugins / Protocole domotique / IPX800''
+
+Puis cliquer sur le bouton en haut à gauche ''Ajouter un équipement''
 
 Puis saisir le nom de l'équipement (ex. IPX 1)
 
 Puis définir :
 
-* '''Objet parent'''
-* '''Catégorie '''(optionnelle)
-* '''Activer '''(à cocher, sinon l’équipement ne sera pas utilisable)
-* '''Visible '''(optionel si vous ne désirez pas le rendre visible sur le Dashboard)
-* '''Adresse IP'''
-* '''Port'''
-* '''Compte'''
-* '''Mot de passe'''
+* ''Objet parent''
+* ''Catégorie'' (optionnelle)
+* ''Activer'' (à cocher, sinon l’équipement ne sera pas utilisable)
+* ''Visible'' (optionel si vous ne désirez pas le rendre visible sur le Dashboard)
+* ''Adresse IP''
+* ''Port''
+* ''Compte''
+* ''Mot de passe''
 
 === Frequence de rafraichissement ===
 Pour les entrées analogiques et les compteurs, les données récupéré par le plugin le sont toutes les minutes. Impossible de faire plus fréquent.
 Pour le reste, si le mode push est activé, le rafraichissement est quasi instantané.
 
+Pour activer le push, il faut cliquer sur
+
+image::../images/bouton_config_push.jpg[]
+
+Ensuite aller en bas et cliquer sur Appliquer.
+
 == Quelques copies d'écran ==
 image::../images/ipx800_screenshot1.jpg[align="center"]
 image::../images/ipx800_screenshot2.jpg[align="center"]
 image::../images/ipx800_screenshot3.jpg[align="center"]
+
+=== FAQ
+include::faq.asciidoc[]
 
 == Change log ==
 include::changelog.asciidoc[]
