--- a/core/i18n/id_ID.json
+++ b/core/i18n/id_ID.json
@@ -69,7 +69,7 @@
         "Entrée analogique": "Entrée analogique",
         "Relai": "Relai",
         "Entrée numérique": "Entrée numérique",
-        "Compteur": "Compteur",
+        "Compteur": "Counter",
         "Extensions X800": "Extensions X800",
         "Carte X800 1": "Carte X800 1",
         "Carte X800 2": "Carte X800 2",
