--- a/core/i18n/it_IT.json
+++ b/core/i18n/it_IT.json
@@ -1,140 +1,140 @@
 {
     "plugins/ipx800/desktop/php/ipx800_analogique.php": {
         "Général": "Generale",
-        "Nom de l'entrée analogique": "Nom de l'entrée analogique",
-        "Objet parent": "Objet parent",
+        "Nom de l'entrée analogique": "Nome degli ingressi analogici",
+        "Objet parent": "Oggetto padre",
         "Aucun": "Nessuno",
         "Catégorie": "Categoria",
         "Activer": "Attiva",
         "Visible": "Visibile",
-        "Indicateurs": "Indicateurs",
+        "Indicateurs": "Indicatori",
         "Nom": "Nome",
-        "Sous-Type": "Sous-Type",
+        "Sous-Type": "Sotto-tipo",
         "Valeur": "Valore",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
+        "Unité": "Unità",
+        "Paramètres": "Impostazioni",
         "Sauvegarder": "Salva"
     },
     "plugins/ipx800/desktop/php/ipx800_bouton.php": {
         "Général": "Generale",
-        "Nom de l'entrée numérique": "Nom de l'entrée numérique",
-        "Objet parent": "Objet parent",
+        "Nom de l'entrée numérique": "Nome degli ingressi digitali",
+        "Objet parent": "Oggetto padre",
         "Aucun": "Nessuno",
         "Catégorie": "Categoria",
         "Activer": "Attiva",
         "Visible": "Visibile",
-        "Indicateurs": "Indicateurs",
+        "Indicateurs": "Indicatori",
         "Nom": "Nome",
-        "Sous-Type": "Sous-Type",
+        "Sous-Type": "Sotto-tipo",
         "Valeur": "Valore",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
+        "Unité": "Unità",
+        "Paramètres": "Impostazioni",
         "Sauvegarder": "Salva"
     },
     "plugins/ipx800/desktop/php/ipx800_relai.php": {
         "Général": "Generale",
-        "Nom du relai": "Nom du relai",
-        "Objet parent": "Objet parent",
+        "Nom du relai": "Nome relé",
+        "Objet parent": "Oggetto padre",
         "Aucun": "Nessuno",
         "Catégorie": "Categoria",
         "Activer": "Attiva",
         "Visible": "Visibile",
-        "Indicateurs": "Indicateurs",
+        "Indicateurs": "Indicatori",
         "Nom": "Nome",
-        "Sous-Type": "Sous-Type",
+        "Sous-Type": "Sotto-tipo",
         "Valeur": "Valore",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
+        "Unité": "Unità",
+        "Paramètres": "Impostazioni",
         "Sauvegarder": "Salva"
     },
     "plugins/ipx800/desktop/php/ipx800_compteur.php": {
         "Général": "Generale",
-        "Nom du compteur": "Nom du compteur",
-        "Nom de l'entrée numérique": "Nom de l'entrée numérique",
-        "Objet parent": "Objet parent",
+        "Nom du compteur": "Nome sensore",
+        "Nom de l'entrée numérique": "Nome degli ingressi digitali",
+        "Objet parent": "Oggetto padre",
         "Aucun": "Nessuno",
         "Catégorie": "Categoria",
         "Activer": "Attiva",
         "Visible": "Visibile",
-        "Indicateurs": "Indicateurs",
+        "Indicateurs": "Indicatori",
         "Nom": "Nome",
-        "Sous-Type": "Sous-Type",
+        "Sous-Type": "Sotto-tipo",
         "Valeur": "Valore",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
+        "Unité": "Unità",
+        "Paramètres": "Impostazioni",
         "Sauvegarder": "Salva"
     },
     "plugins/ipx800/desktop/php/ipx800.php": {
-        "Ajouter une IPX800": "Ajouter une IPX800",
-        "Entrée analogique": "Entrée analogique",
-        "Relai": "Relai",
-        "Entrée numérique": "Entrée numérique",
-        "Compteur": "Compteur",
-        "Extensions X800": "Extensions X800",
-        "Carte X800 1": "Carte X800 1",
-        "Carte X800 2": "Carte X800 2",
-        "Carte X800 3": "Carte X800 3",
-        "Extensions X440": "Extensions X440",
-        "Carte X440 1": "Carte X440 1",
-        "Carte X440 2": "Carte X440 2",
-        "Carte X440 3": "Carte X440 3",
-        "Mes IPX": "Mes IPX",
+        "Ajouter une IPX800": "Aggiungi IPX800",
+        "Entrée analogique": "Ingresso analogico",
+        "Relai": "Relé",
+        "Entrée numérique": "Ingresso digitale",
+        "Compteur": "Contatore",
+        "Extensions X800": "Estensioni X800",
+        "Carte X800 1": "X800 Scheda 1",
+        "Carte X800 2": "X800 Scheda 2",
+        "Carte X800 3": "X800 Scheda 3",
+        "Extensions X440": "Estensioni X440",
+        "Carte X440 1": "X440 Scheda 1",
+        "Carte X440 2": "X440 Scheda 2",
+        "Carte X440 3": "X440 Scheda 3",
+        "Mes IPX": "Il miei IPX",
         "Général": "Generale",
-        "Nom de l'ipx800": "Nom de l'ipx800",
-        "Objet parent": "Objet parent",
+        "Nom de l'ipx800": "Nome IPX800",
+        "Objet parent": "Oggetto padre",
         "Aucun": "Nessuno",
         "Catégorie": "Categoria",
         "Activer": "Attiva",
-        "Configurer push": "Configurer push",
-        "Accéder à la carte": "Accéder à la carte",
+        "Configurer push": "Configura push",
+        "Accéder à la carte": "Accedi alla mappa",
         "Visible": "Visibile",
-        "IP de l'ipx800": "IP de l'ipx800",
-        "Port de l'ipx800": "Port de l'ipx800",
-        "Compte de l'ipx800": "Compte de l'ipx800",
-        "Password de l'ipx800": "Password de l'ipx800",
-        "Indicateurs": "Indicateurs",
+        "IP de l'ipx800": "IP IPX800",
+        "Port de l'ipx800": "Porta IPX800",
+        "Compte de l'ipx800": "Account IPX800",
+        "Password de l'ipx800": "Password IPX800",
+        "Indicateurs": "Indicatori",
         "Nom": "Nome",
-        "Sous-Type": "Sous-Type",
+        "Sous-Type": "Sotto-tipo",
         "Valeur": "Valore",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
+        "Unité": "Unità",
+        "Paramètres": "Impostazioni",
         "Supprimer": "Elimina",
         "Sauvegarder": "Salva",
         "Sauvegarde effectuée avec succès": "Backup completato correttamente",
-        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"></i>": "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"></i>"
+        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"></i>": "Usa la seguente icona per visionare i dettagli dell'elemento <i class=\"fa fa-sitemap\"></i>"
     },
     "plugins/ipx800/desktop/modal/ipx800.configpush.php": {
-        "Information générale": "Information générale",
-        "IP de Jeedom": "IP de Jeedom",
-        "Chemin web": "Chemin web",
-        "Relai": "Relai",
-        "Relai X800 1": "Relai X800 1",
-        "Relai X800 2": "Relai X800 2",
-        "Relai X800 3": "Relai X800 3",
-        "Entrée numérique": "Entrée numérique",
-        "Entrée numérique X800 1": "Entrée numérique X800 1",
-        "Entrée numérique X800 2": "Entrée numérique X800 2",
-        "Entrée numérique X800 3": "Entrée numérique X800 3",
-        "Appliquer": "Appliquer",
-        "Tout décocher": "Tout décocher",
-        "Tout cocher": "Tout cocher"
+        "Information générale": "Informazioni principali",
+        "IP de Jeedom": "IP Jeedo",
+        "Chemin web": "Percorso web",
+        "Relai": "Relé",
+        "Relai X800 1": "1 relé X800",
+        "Relai X800 2": "X800 Relé 2",
+        "Relai X800 3": "X800 relé 3",
+        "Entrée numérique": "Ingresso digitale",
+        "Entrée numérique X800 1": "X800 Ingresso digitale 1",
+        "Entrée numérique X800 2": "X800 Ingresso digitale 2",
+        "Entrée numérique X800 3": "X800 Ingresso digitale 3",
+        "Appliquer": "Applica",
+        "Tout décocher": "Deseleziona tutti",
+        "Tout cocher": "Seleziona tutti"
     },
     "plugins/ipx800/desktop/js/ipx800.js": {
         "Nom": "Nome",
-        "Calcul": "Calcul",
-        "Rechercher équipement": "Rechercher équipement",
-        "Formule standard": "Formule standard",
+        "Calcul": "Calcolo",
+        "Rechercher équipement": "Ricerca strumentazione",
+        "Formule standard": "Formula standard",
         "Unite": "Unite",
         "Min": "Min",
         "Max": "Max",
-        "Historiser": "Historiser",
+        "Historiser": "Storicizza",
         "Afficher": "Mostra",
-        "Inverser": "Inverser",
-        "Correction Min Auto": "Correction Min Auto",
-        "Correction Max Auto": "Correction Max Auto",
-        "Tester": "Tester",
-        "Configurer l'IPX pour avoir le retour des etats": "Configurer l'IPX pour avoir le retour des etats",
-        "Accèder à l'interface de l'IPX": "Accèder à l'interface de l'IPX",
-        "Application de la configuration Push correcte": "Application de la configuration Push correcte"
+        "Inverser": "Inverti",
+        "Correction Min Auto": "Correzione minore automatica",
+        "Correction Max Auto": "Correzione automatica massima",
+        "Tester": "Prova",
+        "Configurer l'IPX pour avoir le retour des etats": "Imposta l\\'IPX per il ritorno stati",
+        "Accèder à l'interface de l'IPX": "Apri interfaccia IPX",
+        "Application de la configuration Push correcte": "Applica diritti configurazione Push"
     }
 }
