--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -1,33 +1,39 @@
 [horizontal]
-1.41:: Modification être compatible avec le plugin mobile
+1.42:: Continue la collecte lorsque une IPX est HS.
++
+Trappe certains messages d'erreur.
++
+Ajout du type LIGHT_TOGGL pour les relais.
+
+1.41:: Modification être compatible avec le plugin mobile.
 
 1.40:: Mise a jour des entrées analogiques, même si la valeur ne change pas pour les graphiques.
 
-1.39:: Compatibilité Jeedom 2.0
+1.39:: Compatibilité Jeedom 2.0.
 
 1.38:: Modification de cron pour plus d'autonomie.
 +
 Modification de l'extension du logo.
 +
-Compatibilité Imperihome
+Compatibilité Imperihome.
 +
-Retrait de la suppression des équipements lors de la désactivation du plugin
+Retrait de la suppression des équipements lors de la désactivation du plugin.
 
 1.37:: Correction par rapport au nouveau core.
 
-1.36:: Correction des formules pour les pinces ampèremetriques
+1.36:: Correction des formules pour les pinces ampèremetriques.
 
-1.35:: Message de debug pour les receptions de push
+1.35:: Message de debug pour les receptions de push.
 
 1.34:: Prise en compte du port pour jeedom et de l'IP sans qu'il soit nécessaire que ce soit renseigné au niveau globale.
 
-1.33:: Correction des fréquences d'impulsion par minute
+1.33:: Correction des fréquences d'impulsion par minute.
 
-1.32:: Message de debug pour les calculs d'impulsion/minute
+1.32:: Message de debug pour les calculs d'impulsion/minute.
 
 1.31:: Supression de l'info `updatetime`.
 
-1.30:: Ajout des pinces 50A  .
+1.30:: Ajout des pinces 50A.
 
 1.29:: Ajout de Correction automatique par rapport au seuil Min et Max.
 
