--- a/doc/fr_FR/index.asciidoc
+++ b/doc/fr_FR/index.asciidoc
@@ -4,9 +4,9 @@ Ce plugin permet de gérer les cartes IPX800 de GCE.
 Initialement, ce plugin a été créé pour connecter les IPX800 de GCE.
 
 === Données visibles sur le Dashboard : ===
-* ''les entrée analogiques''
-* ''les entrée numeriques''
-* ''les relai''
+* ''les entrées analogiques''
+* ''les entrées numeriques''
+* ''les relais''
 * ''les compteurs d'impulsions''
 
 == Installation/Paramétrage ==
@@ -14,7 +14,7 @@ Nous allons maintenant paramétrer un équipement. Pour se faire, cliquer sur ''
 
 Puis cliquer sur le bouton en haut à gauche ''Ajouter un équipement''
 
-Puis saisir le nom de l'équipement (ex. IPX 1)
+Puis saisir le nom de l'équipement (ex. IPX 1).
 
 Puis définir :
 
@@ -27,22 +27,46 @@ Puis définir :
 * ''Compte''
 * ''Mot de passe''
 
-=== Frequence de rafraichissement ===
-Pour les entrées analogiques et les compteurs, les données récupéré par le plugin le sont toutes les minutes. Impossible de faire plus fréquent.
+=== Fréquence de rafraichissement ===
+Pour les entrées analogiques et les compteurs, les données sont récupérées par le plugin toutes les minutes. Il n'est pas possible d'avoir une fréquence plus élevée.
 Pour le reste, si le mode push est activé, le rafraichissement est quasi instantané.
 
 Pour activer le push, il faut cliquer sur
-
 image::../images/bouton_config_push.jpg[]
 
 Ensuite aller en bas et cliquer sur Appliquer.
+
+=== Comportement avec l'application mobile ===
+Par defaut, voici le comportement :
+
+* ''L'ip800''
+
+Les commandes sont toutes paramétrées.
+
+* ''les entrées analogiques''
+
+Les commandes sont toutes par defaut visible et le type dépend de la sonde choisi.
+
+* ''les entrées numeriques''
+
+Les commandes sont considérées comme des lumières.
+
+* ''les relais''
+
+Les commandes sont considérées comme des lumières.
+
+* ''les compteurs d'impulsions''
+
+Les commandes sont considérées comme des types génériques.
+
+Il faut noter que l'on retrouvera dans l'application les commandes à partir du moment où elles sont paramétrées, même si elles ne sont pas marquées comme visible. Pour les masquer, il faut choisir dasn "Configuration commande" => "Type générique" => "Ne pas tenir compte de cette commande".
 
 == Quelques copies d'écran ==
 image::../images/ipx800_screenshot1.jpg[align="center"]
 image::../images/ipx800_screenshot2.jpg[align="center"]
 image::../images/ipx800_screenshot3.jpg[align="center"]
 
-=== FAQ
+== FAQ ==
 include::faq.asciidoc[]
 
 == Change log ==
