Compatible application mobil
Continue la collecte lorsque une IPX est HS.
Trappe certains messages d'erreur.
Ajout du type LIGHT_TOGGL pour les relais.
Définition template des relais boutons.

--- a/doc/fr_FR/changelog.asciidoc
+++ b/doc/fr_FR/changelog.asciidoc
@@ -4,6 +4,8 @@
 Trappe certains messages d'erreur.
 +
 Ajout du type LIGHT_TOGGL pour les relais.
++
+Définition template des relais boutons.
 
 1.41:: Modification être compatible avec le plugin mobile.
 
