[ROBOT] Action all

--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -1,140 +1,140 @@
 {
-    "plugins/ipx800/desktop/php/ipx800_analogique.php": {
-        "Général": "Allgemein",
-        "Nom de l'entrée analogique": "Analogeingang Namen",
-        "Objet parent": "Eltern-Objekt",
-        "Aucun": "Ohne",
-        "Catégorie": "Kategorie",
-        "Activer": "aktivieren",
-        "Visible": "Sichtbar",
-        "Indicateurs": "Indikatoren",
-        "Nom": "Name",
-        "Sous-Type": "Untertyp",
-        "Valeur": "Wert",
-        "Unité": "Unit",
-        "Paramètres": "Parameter",
-        "Sauvegarder": "Speichern"
+    "plugins\/ipx800\/desktop\/php\/ipx800_analogique.php": {
+        "Général": "Général",
+        "Nom de l'entrée analogique": "Nom de l'entrée analogique",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
+        "Visible": "Visible",
+        "Indicateurs": "Indicateurs",
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/php/ipx800_bouton.php": {
-        "Général": "Allgemein",
-        "Nom de l'entrée numérique": "Name des digitalen Eingangs",
-        "Objet parent": "Eltern-Objekt",
-        "Aucun": "Ohne",
-        "Catégorie": "Kategorie",
-        "Activer": "aktivieren",
-        "Visible": "Sichtbar",
-        "Indicateurs": "Indikatoren",
-        "Nom": "Name",
-        "Sous-Type": "Untertyp",
-        "Valeur": "Wert",
-        "Unité": "Unit",
-        "Paramètres": "Parameter",
-        "Sauvegarder": "Speichern"
+    "plugins\/ipx800\/desktop\/php\/ipx800_bouton.php": {
+        "Général": "Général",
+        "Nom de l'entrée numérique": "Nom de l'entrée numérique",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
+        "Visible": "Visible",
+        "Indicateurs": "Indicateurs",
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/php/ipx800_relai.php": {
-        "Général": "Allgemein",
-        "Nom du relai": "Relais Bezeichnung",
-        "Objet parent": "Eltern-Objekt",
-        "Aucun": "Ohne",
-        "Catégorie": "Kategorie",
-        "Activer": "aktivieren",
-        "Visible": "Sichtbar",
-        "Indicateurs": "Indikatoren",
-        "Nom": "Name",
-        "Sous-Type": "Untertyp",
-        "Valeur": "Wert",
-        "Unité": "Unit",
-        "Paramètres": "Parameter",
-        "Sauvegarder": "Speichern"
+    "plugins\/ipx800\/desktop\/php\/ipx800_relai.php": {
+        "Général": "Général",
+        "Nom du relai": "Nom du relai",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
+        "Visible": "Visible",
+        "Indicateurs": "Indicateurs",
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/php/ipx800_compteur.php": {
-        "Général": "Allgemein",
-        "Nom du compteur": "Zählername",
-        "Nom de l'entrée numérique": "Name des digitalen Eingangs",
-        "Objet parent": "Eltern-Objekt",
-        "Aucun": "Ohne",
-        "Catégorie": "Kategorie",
-        "Activer": "aktivieren",
-        "Visible": "Sichtbar",
-        "Indicateurs": "Indikatoren",
-        "Nom": "Name",
-        "Sous-Type": "Untertyp",
-        "Valeur": "Wert",
-        "Unité": "Unit",
-        "Paramètres": "Parameter",
-        "Sauvegarder": "Speichern"
+    "plugins\/ipx800\/desktop\/php\/ipx800_compteur.php": {
+        "Général": "Général",
+        "Nom du compteur": "Nom du compteur",
+        "Nom de l'entrée numérique": "Nom de l'entrée numérique",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
+        "Visible": "Visible",
+        "Indicateurs": "Indicateurs",
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/php/ipx800.php": {
-        "Ajouter une IPX800": "IPX800 hinzufügen",
-        "Entrée analogique": "Analogeingang",
-        "Relai": "Relais",
-        "Entrée numérique": "Digitaleingang",
-        "Compteur": "Zähler",
-        "Extensions X800": "X800 Erweiterungen",
-        "Carte X800 1": "X800 Karte 1",
-        "Carte X800 2": "X800 Karte 2",
-        "Carte X800 3": "X800 Karte 3",
-        "Extensions X440": "X440 Erweiterung",
-        "Carte X440 1": "X440 Karte 1",
-        "Carte X440 2": "X440 Karte 2",
-        "Carte X440 3": "X440 Karte 3",
-        "Mes IPX": "Mein IPX",
-        "Général": "Allgemein",
-        "Nom de l'ipx800": "IPX800 Name",
-        "Objet parent": "Eltern-Objekt",
-        "Aucun": "Ohne",
-        "Catégorie": "Kategorie",
-        "Activer": "aktivieren",
-        "Configurer push": "Konfigurieren drücken",
-        "Accéder à la carte": "auf die Karte zugreifen",
-        "Visible": "Sichtbar",
-        "IP de l'ipx800": "IPX800 IP",
-        "Port de l'ipx800": "IPX800 Port",
-        "Compte de l'ipx800": "IPX800 Benutzername",
-        "Password de l'ipx800": "IPX800 Password",
-        "Indicateurs": "Indikatoren",
-        "Nom": "Name",
-        "Sous-Type": "Untertyp",
-        "Valeur": "Wert",
-        "Unité": "Unit",
-        "Paramètres": "Parameter",
-        "Supprimer": "Löschen",
-        "Sauvegarder": "Speichern",
-        "Sauvegarde effectuée avec succès": "Speichern erfolgreich abgeschlossen",
-        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"></i>": "Benutzen Sie das Icon entsprechend, um das Detail des Elementes zu sehen <i class=\"fa fa-sitemap\"></i>"
+    "plugins\/ipx800\/desktop\/php\/ipx800.php": {
+        "Ajouter une IPX800": "Ajouter une IPX800",
+        "Entrée analogique": "Entrée analogique",
+        "Relai": "Relai",
+        "Entrée numérique": "Entrée numérique",
+        "Compteur": "Compteur",
+        "Extensions X800": "Extensions X800",
+        "Carte X800 1": "Carte X800 1",
+        "Carte X800 2": "Carte X800 2",
+        "Carte X800 3": "Carte X800 3",
+        "Extensions X440": "Extensions X440",
+        "Carte X440 1": "Carte X440 1",
+        "Carte X440 2": "Carte X440 2",
+        "Carte X440 3": "Carte X440 3",
+        "Mes IPX": "Mes IPX",
+        "Général": "Général",
+        "Nom de l'ipx800": "Nom de l'ipx800",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
+        "Configurer push": "Configurer push",
+        "Accéder à la carte": "Accéder à la carte",
+        "Visible": "Visible",
+        "IP de l'ipx800": "IP de l'ipx800",
+        "Port de l'ipx800": "Port de l'ipx800",
+        "Compte de l'ipx800": "Compte de l'ipx800",
+        "Password de l'ipx800": "Password de l'ipx800",
+        "Indicateurs": "Indicateurs",
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Supprimer": "Supprimer",
+        "Sauvegarder": "Sauvegarder",
+        "Sauvegarde effectuée avec succès": "Sauvegarde effectuée avec succès",
+        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>"
     },
-    "plugins/ipx800/desktop/modal/ipx800.configpush.php": {
-        "Information générale": "Allgemeine Information",
-        "IP de Jeedom": "Jeedom IP",
-        "Chemin web": "Web-Pfad",
-        "Relai": "Relais",
-        "Relai X800 1": "X800 Relais 1",
-        "Relai X800 2": "X800 Relais 2",
-        "Relai X800 3": "X800 Relais 3",
-        "Entrée numérique": "Digitaleingang",
-        "Entrée numérique X800 1": "X800 Digitaleingang 1",
-        "Entrée numérique X800 2": "X800 Digitaleingang 2",
-        "Entrée numérique X800 3": "X800 Digitaleingang 3",
-        "Appliquer": "Übernehmen",
-        "Tout décocher": "Auswahl aufheben",
-        "Tout cocher": "alle auswählen"
+    "plugins\/ipx800\/desktop\/modal\/ipx800.configpush.php": {
+        "Information générale": "Information générale",
+        "IP de Jeedom": "IP de Jeedom",
+        "Chemin web": "Chemin web",
+        "Relai": "Relai",
+        "Relai X800 1": "Relai X800 1",
+        "Relai X800 2": "Relai X800 2",
+        "Relai X800 3": "Relai X800 3",
+        "Entrée numérique": "Entrée numérique",
+        "Entrée numérique X800 1": "Entrée numérique X800 1",
+        "Entrée numérique X800 2": "Entrée numérique X800 2",
+        "Entrée numérique X800 3": "Entrée numérique X800 3",
+        "Appliquer": "Appliquer",
+        "Tout décocher": "Tout décocher",
+        "Tout cocher": "Tout cocher"
     },
-    "plugins/ipx800/desktop/js/ipx800.js": {
-        "Nom": "Name",
-        "Calcul": "Berechnung",
-        "Rechercher équipement": "Suche nach",
-        "Formule standard": "Standardformel",
-        "Unite": "Unit",
-        "Min": "min",
-        "Max": "max",
-        "Historiser": "Chronik",
-        "Afficher": "anzeigen",
-        "Inverser": "umgekehrt",
-        "Correction Min Auto": "Korrektur Min   Auto",
-        "Correction Max Auto": "Korrektur Auto Max",
-        "Tester": "Test",
-        "Configurer l'IPX pour avoir le retour des etats": "Konfigurieren Sie IPX für die Rückkehr der Zustände",
-        "Accèder à l'interface de l'IPX": "Der Zugriff auf IPX-Schnittstelle",
-        "Application de la configuration Push correcte": "Die Anwendung der richtigen Konfiguration Push"
+    "plugins\/ipx800\/desktop\/js\/ipx800.js": {
+        "Nom": "Nom",
+        "Calcul": "Calcul",
+        "Rechercher équipement": "Rechercher équipement",
+        "Formule standard": "Formule standard",
+        "Unite": "Unite",
+        "Min": "Min",
+        "Max": "Max",
+        "Historiser": "Historiser",
+        "Afficher": "Afficher",
+        "Inverser": "Inverser",
+        "Correction Min Auto": "Correction Min Auto",
+        "Correction Max Auto": "Correction Max Auto",
+        "Tester": "Tester",
+        "Configurer l'IPX pour avoir le retour des etats": "Configurer l'IPX pour avoir le retour des etats",
+        "Accèder à l'interface de l'IPX": "Accèder à l'interface de l'IPX",
+        "Application de la configuration Push correcte": "Application de la configuration Push correcte"
     }
 }
