--- a/core/i18n/id_ID.json
+++ b/core/i18n/id_ID.json
@@ -1,75 +1,75 @@
 {
-    "plugins/ipx800/desktop/php/ipx800_analogique.php": {
-        "Général": "Umum",
+    "plugins\/ipx800\/desktop\/php\/ipx800_analogique.php": {
+        "Général": "Général",
         "Nom de l'entrée analogique": "Nom de l'entrée analogique",
-        "Objet parent": "Objek induk",
-        "Aucun": "Tak ada",
-        "Catégorie": "Kategori",
-        "Activer": "Mengaktifkan",
-        "Visible": "Terlihat",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
+        "Visible": "Visible",
         "Indicateurs": "Indicateurs",
-        "Nom": "Nama",
-        "Sous-Type": "Subtipe",
-        "Valeur": "Nilai",
-        "Unité": "Satuan",
-        "Paramètres": "Parameter²",
-        "Sauvegarder": "Menyimpan"
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/php/ipx800_bouton.php": {
-        "Général": "Umum",
+    "plugins\/ipx800\/desktop\/php\/ipx800_bouton.php": {
+        "Général": "Général",
         "Nom de l'entrée numérique": "Nom de l'entrée numérique",
-        "Objet parent": "Objek induk",
-        "Aucun": "Tak ada",
-        "Catégorie": "Kategori",
-        "Activer": "Mengaktifkan",
-        "Visible": "Terlihat",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
+        "Visible": "Visible",
         "Indicateurs": "Indicateurs",
-        "Nom": "Nama",
-        "Sous-Type": "Subtipe",
-        "Valeur": "Nilai",
-        "Unité": "Satuan",
-        "Paramètres": "Parameter²",
-        "Sauvegarder": "Menyimpan"
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/php/ipx800_relai.php": {
-        "Général": "Umum",
+    "plugins\/ipx800\/desktop\/php\/ipx800_relai.php": {
+        "Général": "Général",
         "Nom du relai": "Nom du relai",
-        "Objet parent": "Objek induk",
-        "Aucun": "Tak ada",
-        "Catégorie": "Kategori",
-        "Activer": "Mengaktifkan",
-        "Visible": "Terlihat",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
+        "Visible": "Visible",
         "Indicateurs": "Indicateurs",
-        "Nom": "Nama",
-        "Sous-Type": "Subtipe",
-        "Valeur": "Nilai",
-        "Unité": "Satuan",
-        "Paramètres": "Parameter²",
-        "Sauvegarder": "Menyimpan"
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/php/ipx800_compteur.php": {
-        "Général": "Umum",
+    "plugins\/ipx800\/desktop\/php\/ipx800_compteur.php": {
+        "Général": "Général",
         "Nom du compteur": "Nom du compteur",
         "Nom de l'entrée numérique": "Nom de l'entrée numérique",
-        "Objet parent": "Objek induk",
-        "Aucun": "Tak ada",
-        "Catégorie": "Kategori",
-        "Activer": "Mengaktifkan",
-        "Visible": "Terlihat",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
+        "Visible": "Visible",
         "Indicateurs": "Indicateurs",
-        "Nom": "Nama",
-        "Sous-Type": "Subtipe",
-        "Valeur": "Nilai",
-        "Unité": "Satuan",
-        "Paramètres": "Parameter²",
-        "Sauvegarder": "Menyimpan"
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/php/ipx800.php": {
+    "plugins\/ipx800\/desktop\/php\/ipx800.php": {
         "Ajouter une IPX800": "Ajouter une IPX800",
         "Entrée analogique": "Entrée analogique",
         "Relai": "Relai",
         "Entrée numérique": "Entrée numérique",
-        "Compteur": "Counter",
+        "Compteur": "Compteur",
         "Extensions X800": "Extensions X800",
         "Carte X800 1": "Carte X800 1",
         "Carte X800 2": "Carte X800 2",
@@ -79,31 +79,31 @@
         "Carte X440 2": "Carte X440 2",
         "Carte X440 3": "Carte X440 3",
         "Mes IPX": "Mes IPX",
-        "Général": "Umum",
+        "Général": "Général",
         "Nom de l'ipx800": "Nom de l'ipx800",
-        "Objet parent": "Objek induk",
-        "Aucun": "Tak ada",
-        "Catégorie": "Kategori",
-        "Activer": "Mengaktifkan",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
         "Configurer push": "Configurer push",
         "Accéder à la carte": "Accéder à la carte",
-        "Visible": "Terlihat",
+        "Visible": "Visible",
         "IP de l'ipx800": "IP de l'ipx800",
         "Port de l'ipx800": "Port de l'ipx800",
         "Compte de l'ipx800": "Compte de l'ipx800",
         "Password de l'ipx800": "Password de l'ipx800",
         "Indicateurs": "Indicateurs",
-        "Nom": "Nama",
-        "Sous-Type": "Subtipe",
-        "Valeur": "Nilai",
-        "Unité": "Satuan",
-        "Paramètres": "Parameter²",
-        "Supprimer": "Menghapus",
-        "Sauvegarder": "Menyimpan",
-        "Sauvegarde effectuée avec succès": "Cadangan selesai dengan sukses",
-        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"></i>": "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"></i>"
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Supprimer": "Supprimer",
+        "Sauvegarder": "Sauvegarder",
+        "Sauvegarde effectuée avec succès": "Sauvegarde effectuée avec succès",
+        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>"
     },
-    "plugins/ipx800/desktop/modal/ipx800.configpush.php": {
+    "plugins\/ipx800\/desktop\/modal\/ipx800.configpush.php": {
         "Information générale": "Information générale",
         "IP de Jeedom": "IP de Jeedom",
         "Chemin web": "Chemin web",
@@ -119,20 +119,20 @@
         "Tout décocher": "Tout décocher",
         "Tout cocher": "Tout cocher"
     },
-    "plugins/ipx800/desktop/js/ipx800.js": {
-        "Nom": "Nama",
-        "Calcul": "Perhitungan",
-        "Rechercher équipement": "Peralatan pencarian",
+    "plugins\/ipx800\/desktop\/js\/ipx800.js": {
+        "Nom": "Nom",
+        "Calcul": "Calcul",
+        "Rechercher équipement": "Rechercher équipement",
         "Formule standard": "Formule standard",
-        "Unite": "Bersatu",
+        "Unite": "Unite",
         "Min": "Min",
         "Max": "Max",
-        "Historiser": "Historicize",
-        "Afficher": "Memenitikan",
-        "Inverser": "Membalikkan",
+        "Historiser": "Historiser",
+        "Afficher": "Afficher",
+        "Inverser": "Inverser",
         "Correction Min Auto": "Correction Min Auto",
         "Correction Max Auto": "Correction Max Auto",
-        "Tester": "Coba",
+        "Tester": "Tester",
         "Configurer l'IPX pour avoir le retour des etats": "Configurer l'IPX pour avoir le retour des etats",
         "Accèder à l'interface de l'IPX": "Accèder à l'interface de l'IPX",
         "Application de la configuration Push correcte": "Application de la configuration Push correcte"
