--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -1,140 +1,140 @@
 {
-    "plugins/ipx800/desktop/php/ipx800_analogique.php": {
-        "Général": "Main",
-        "Nom de l'entrée analogique": "Name of analog input",
-        "Objet parent": "Parent object",
-        "Aucun": "None",
-        "Catégorie": "Category",
-        "Activer": "Enable",
+    "plugins\/ipx800\/desktop\/php\/ipx800_analogique.php": {
+        "Général": "Général",
+        "Nom de l'entrée analogique": "Nom de l'entrée analogique",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
         "Visible": "Visible",
-        "Indicateurs": "Indicators",
-        "Nom": "Name",
-        "Sous-Type": "Sub-type",
-        "Valeur": "Value",
-        "Unité": "Unit",
-        "Paramètres": "Settings",
-        "Sauvegarder": "Save"
+        "Indicateurs": "Indicateurs",
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/php/ipx800_bouton.php": {
-        "Général": "Main",
-        "Nom de l'entrée numérique": "Name of digital input",
-        "Objet parent": "Parent object",
-        "Aucun": "None",
-        "Catégorie": "Category",
-        "Activer": "Enable",
+    "plugins\/ipx800\/desktop\/php\/ipx800_bouton.php": {
+        "Général": "Général",
+        "Nom de l'entrée numérique": "Nom de l'entrée numérique",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
         "Visible": "Visible",
-        "Indicateurs": "Indicators",
-        "Nom": "Name",
-        "Sous-Type": "Sub-type",
-        "Valeur": "Value",
-        "Unité": "Unit",
-        "Paramètres": "Settings",
-        "Sauvegarder": "Save"
+        "Indicateurs": "Indicateurs",
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/php/ipx800_relai.php": {
-        "Général": "Main",
-        "Nom du relai": "Relay name",
-        "Objet parent": "Parent object",
-        "Aucun": "None",
-        "Catégorie": "Category",
-        "Activer": "Enable",
+    "plugins\/ipx800\/desktop\/php\/ipx800_relai.php": {
+        "Général": "Général",
+        "Nom du relai": "Nom du relai",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
         "Visible": "Visible",
-        "Indicateurs": "Indicators",
-        "Nom": "Name",
-        "Sous-Type": "Sub-type",
-        "Valeur": "Value",
-        "Unité": "Unit",
-        "Paramètres": "Settings",
-        "Sauvegarder": "Save"
+        "Indicateurs": "Indicateurs",
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/php/ipx800_compteur.php": {
-        "Général": "Main",
-        "Nom du compteur": "Sensor name",
-        "Nom de l'entrée numérique": "Name of digital input",
-        "Objet parent": "Parent object",
-        "Aucun": "None",
-        "Catégorie": "Category",
-        "Activer": "Enable",
+    "plugins\/ipx800\/desktop\/php\/ipx800_compteur.php": {
+        "Général": "Général",
+        "Nom du compteur": "Nom du compteur",
+        "Nom de l'entrée numérique": "Nom de l'entrée numérique",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
         "Visible": "Visible",
-        "Indicateurs": "Indicators",
-        "Nom": "Name",
-        "Sous-Type": "Sub-type",
-        "Valeur": "Value",
-        "Unité": "Unit",
-        "Paramètres": "Settings",
-        "Sauvegarder": "Save"
+        "Indicateurs": "Indicateurs",
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/php/ipx800.php": {
-        "Ajouter une IPX800": "Add IPX800",
-        "Entrée analogique": "Analog input",
-        "Relai": "Relay",
-        "Entrée numérique": "Digital input",
-        "Compteur": "Meter",
-        "Extensions X800": "X800 extensions",
-        "Carte X800 1": "X800 1 board",
-        "Carte X800 2": "X800 2 board",
-        "Carte X800 3": "X800 3 board",
-        "Extensions X440": "X440 extensions",
-        "Carte X440 1": "X440 1 board",
-        "Carte X440 2": "X440 2 board",
-        "Carte X440 3": "X440 3 board",
-        "Mes IPX": "My IPX",
-        "Général": "Main",
-        "Nom de l'ipx800": "IPX800 name",
-        "Objet parent": "Parent object",
-        "Aucun": "None",
-        "Catégorie": "Category",
-        "Activer": "Enable",
-        "Configurer push": "Configure push",
-        "Accéder à la carte": "Access the map",
+    "plugins\/ipx800\/desktop\/php\/ipx800.php": {
+        "Ajouter une IPX800": "Ajouter une IPX800",
+        "Entrée analogique": "Entrée analogique",
+        "Relai": "Relai",
+        "Entrée numérique": "Entrée numérique",
+        "Compteur": "Compteur",
+        "Extensions X800": "Extensions X800",
+        "Carte X800 1": "Carte X800 1",
+        "Carte X800 2": "Carte X800 2",
+        "Carte X800 3": "Carte X800 3",
+        "Extensions X440": "Extensions X440",
+        "Carte X440 1": "Carte X440 1",
+        "Carte X440 2": "Carte X440 2",
+        "Carte X440 3": "Carte X440 3",
+        "Mes IPX": "Mes IPX",
+        "Général": "Général",
+        "Nom de l'ipx800": "Nom de l'ipx800",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
+        "Configurer push": "Configurer push",
+        "Accéder à la carte": "Accéder à la carte",
         "Visible": "Visible",
-        "IP de l'ipx800": "IPX800 IP",
-        "Port de l'ipx800": "IPX800 port",
-        "Compte de l'ipx800": "ipx800 Account",
-        "Password de l'ipx800": "IPX800 password",
-        "Indicateurs": "Indicators",
-        "Nom": "Name",
-        "Sous-Type": "Sub-type",
-        "Valeur": "Value",
-        "Unité": "Unit",
-        "Paramètres": "Settings",
-        "Supprimer": "Delete",
-        "Sauvegarder": "Save",
-        "Sauvegarde effectuée avec succès": "Backup successfully completed",
-        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"></i>": "Use the following icon to see the detail of the element <i class=\"fa fa-sitemap\"></i>"
+        "IP de l'ipx800": "IP de l'ipx800",
+        "Port de l'ipx800": "Port de l'ipx800",
+        "Compte de l'ipx800": "Compte de l'ipx800",
+        "Password de l'ipx800": "Password de l'ipx800",
+        "Indicateurs": "Indicateurs",
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Supprimer": "Supprimer",
+        "Sauvegarder": "Sauvegarder",
+        "Sauvegarde effectuée avec succès": "Sauvegarde effectuée avec succès",
+        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>"
     },
-    "plugins/ipx800/desktop/modal/ipx800.configpush.php": {
-        "Information générale": "Main information",
-        "IP de Jeedom": "Jeedom IP",
-        "Chemin web": "Web path",
-        "Relai": "Relay",
-        "Relai X800 1": "X800 1 relay",
-        "Relai X800 2": "X800 2 relay",
-        "Relai X800 3": "X800 3 relay",
-        "Entrée numérique": "Digital input",
-        "Entrée numérique X800 1": "X800 1 digital input",
-        "Entrée numérique X800 2": "X800 2 digital input",
-        "Entrée numérique X800 3": "Digital input X800 3",
-        "Appliquer": "Apply",
-        "Tout décocher": "Uncheck all",
-        "Tout cocher": "Check all"
+    "plugins\/ipx800\/desktop\/modal\/ipx800.configpush.php": {
+        "Information générale": "Information générale",
+        "IP de Jeedom": "IP de Jeedom",
+        "Chemin web": "Chemin web",
+        "Relai": "Relai",
+        "Relai X800 1": "Relai X800 1",
+        "Relai X800 2": "Relai X800 2",
+        "Relai X800 3": "Relai X800 3",
+        "Entrée numérique": "Entrée numérique",
+        "Entrée numérique X800 1": "Entrée numérique X800 1",
+        "Entrée numérique X800 2": "Entrée numérique X800 2",
+        "Entrée numérique X800 3": "Entrée numérique X800 3",
+        "Appliquer": "Appliquer",
+        "Tout décocher": "Tout décocher",
+        "Tout cocher": "Tout cocher"
     },
-    "plugins/ipx800/desktop/js/ipx800.js": {
-        "Nom": "Name",
-        "Calcul": "Calculation",
-        "Rechercher équipement": "Search for equipment",
-        "Formule standard": "Standard formula",
+    "plugins\/ipx800\/desktop\/js\/ipx800.js": {
+        "Nom": "Nom",
+        "Calcul": "Calcul",
+        "Rechercher équipement": "Rechercher équipement",
+        "Formule standard": "Formule standard",
         "Unite": "Unite",
         "Min": "Min",
         "Max": "Max",
-        "Historiser": "Record history",
-        "Afficher": "Display",
-        "Inverser": "Invert",
-        "Correction Min Auto": "Min self correcting",
-        "Correction Max Auto": "Max correction Auto",
-        "Tester": "Test",
-        "Configurer l'IPX pour avoir le retour des etats": "Set the IPX for states return",
-        "Accèder à l'interface de l'IPX": "Open IPX interface",
-        "Application de la configuration Push correcte": "Apply right  Push configuration "
+        "Historiser": "Historiser",
+        "Afficher": "Afficher",
+        "Inverser": "Inverser",
+        "Correction Min Auto": "Correction Min Auto",
+        "Correction Max Auto": "Correction Max Auto",
+        "Tester": "Tester",
+        "Configurer l'IPX pour avoir le retour des etats": "Configurer l'IPX pour avoir le retour des etats",
+        "Accèder à l'interface de l'IPX": "Accèder à l'interface de l'IPX",
+        "Application de la configuration Push correcte": "Application de la configuration Push correcte"
     }
 }
