--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -1,140 +1,140 @@
 {
-    "plugins/ipx800/desktop/php/ipx800_analogique.php": {
-        "Général": "General",
-        "Nom de l'entrée analogique": "Nombre de la entrada analógica",
-        "Objet parent": "Objeto padre",
-        "Aucun": "Ningún",
-        "Catégorie": "Categoría",
-        "Activer": "Activar",
-        "Visible": "Visible",
-        "Indicateurs": "Indicadores",
-        "Nom": "Nombre",
-        "Sous-Type": "Sub-Tipo",
-        "Valeur": "Valor",
-        "Unité": "Unidad",
-        "Paramètres": "Parámetros",
-        "Sauvegarder": "Guardar"
-    },
-    "plugins/ipx800/desktop/php/ipx800_bouton.php": {
+    "plugins\/ipx800\/desktop\/php\/ipx800_analogique.php": {
         "Général": "Général",
-        "Nom de l'entrée numérique": "Nombre de la entrada digital",
-        "Objet parent": "Objeto padre",
-        "Aucun": "Ningún",
-        "Catégorie": "Categoría",
-        "Activer": "Activar",
+        "Nom de l'entrée analogique": "Nom de l'entrée analogique",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
         "Visible": "Visible",
-        "Indicateurs": "Indicadores",
-        "Nom": "Nombre",
-        "Sous-Type": "Sub-Tipo",
-        "Valeur": "Valor",
-        "Unité": "Unidad",
-        "Paramètres": "Parámetros",
-        "Sauvegarder": "Guardar"
+        "Indicateurs": "Indicateurs",
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/php/ipx800_relai.php": {
+    "plugins\/ipx800\/desktop\/php\/ipx800_bouton.php": {
         "Général": "Général",
-        "Nom du relai": "Nombre del relé",
-        "Objet parent": "Objeto padre",
-        "Aucun": "Ningún",
-        "Catégorie": "Categoría",
-        "Activer": "Activar",
+        "Nom de l'entrée numérique": "Nom de l'entrée numérique",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
         "Visible": "Visible",
-        "Indicateurs": "Indicadores",
-        "Nom": "Nombre",
-        "Sous-Type": "Sub-Tipo",
-        "Valeur": "Valor",
-        "Unité": "Unidad",
-        "Paramètres": "Parámetros",
-        "Sauvegarder": "Guardar"
+        "Indicateurs": "Indicateurs",
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/php/ipx800_compteur.php": {
+    "plugins\/ipx800\/desktop\/php\/ipx800_relai.php": {
         "Général": "Général",
-        "Nom du compteur": "Nombre del contador",
-        "Nom de l'entrée numérique": "Nombre de la entrada digital",
-        "Objet parent": "Objeto padre",
-        "Aucun": "Ningún",
-        "Catégorie": "Categoría",
-        "Activer": "Activar",
+        "Nom du relai": "Nom du relai",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
         "Visible": "Visible",
-        "Indicateurs": "Indicadores",
-        "Nom": "Nombre",
-        "Sous-Type": "Sub-Tipo",
-        "Valeur": "Valor",
-        "Unité": "Unidad",
-        "Paramètres": "Parámetros",
-        "Sauvegarder": "Guardar"
+        "Indicateurs": "Indicateurs",
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/php/ipx800.php": {
-        "Ajouter une IPX800": "Añadir una IPX800",
-        "Entrée analogique": "Entrada analógica",
-        "Relai": "Relé",
-        "Entrée numérique": "Entrada digital",
-        "Compteur": "Contador",
-        "Extensions X800": "Extensiones X800",
-        "Carte X800 1": "Carta X800 1",
-        "Carte X800 2": "Carta X800 2",
-        "Carte X800 3": "Carta X800 3",
-        "Extensions X440": "Extensiones X440",
-        "Carte X440 1": "Carta X440 1",
-        "Carte X440 2": "Carta X440 2",
-        "Carte X440 3": "Carta X440 3",
-        "Mes IPX": "Mis IPX",
+    "plugins\/ipx800\/desktop\/php\/ipx800_compteur.php": {
         "Général": "Général",
-        "Nom de l'ipx800": "Nombre del ipx800",
-        "Objet parent": "Objeto padre",
-        "Aucun": "Ningún",
-        "Catégorie": "Categoría",
-        "Activer": "Activar",
-        "Configurer push": "Configurar push",
-        "Accéder à la carte": "Ir al mapa",
+        "Nom du compteur": "Nom du compteur",
+        "Nom de l'entrée numérique": "Nom de l'entrée numérique",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
         "Visible": "Visible",
-        "IP de l'ipx800": "IP del ipx800",
-        "Port de l'ipx800": "Puerto del ipx800",
-        "Compte de l'ipx800": "Cuenta de la ipx800",
-        "Password de l'ipx800": "Contraseña del ipx800",
-        "Indicateurs": "Indicadores",
-        "Nom": "Nombre",
-        "Sous-Type": "Sub-Tipo",
-        "Valeur": "Valor",
-        "Unité": "Unidad",
-        "Paramètres": "Parámetros",
-        "Supprimer": "Borrar",
-        "Sauvegarder": "Guardar",
-        "Sauvegarde effectuée avec succès": "Guardado correctamente",
-        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"></i>": "Utilice el siguiente icono para ver el detalle del elemento <i class=\"fa fa-sitemap\"></i> "
+        "Indicateurs": "Indicateurs",
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Sauvegarder": "Sauvegarder"
     },
-    "plugins/ipx800/desktop/modal/ipx800.configpush.php": {
-        "Information générale": "información general",
+    "plugins\/ipx800\/desktop\/php\/ipx800.php": {
+        "Ajouter une IPX800": "Ajouter une IPX800",
+        "Entrée analogique": "Entrée analogique",
+        "Relai": "Relai",
+        "Entrée numérique": "Entrée numérique",
+        "Compteur": "Compteur",
+        "Extensions X800": "Extensions X800",
+        "Carte X800 1": "Carte X800 1",
+        "Carte X800 2": "Carte X800 2",
+        "Carte X800 3": "Carte X800 3",
+        "Extensions X440": "Extensions X440",
+        "Carte X440 1": "Carte X440 1",
+        "Carte X440 2": "Carte X440 2",
+        "Carte X440 3": "Carte X440 3",
+        "Mes IPX": "Mes IPX",
+        "Général": "Général",
+        "Nom de l'ipx800": "Nom de l'ipx800",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Catégorie": "Catégorie",
+        "Activer": "Activer",
+        "Configurer push": "Configurer push",
+        "Accéder à la carte": "Accéder à la carte",
+        "Visible": "Visible",
+        "IP de l'ipx800": "IP de l'ipx800",
+        "Port de l'ipx800": "Port de l'ipx800",
+        "Compte de l'ipx800": "Compte de l'ipx800",
+        "Password de l'ipx800": "Password de l'ipx800",
+        "Indicateurs": "Indicateurs",
+        "Nom": "Nom",
+        "Sous-Type": "Sous-Type",
+        "Valeur": "Valeur",
+        "Unité": "Unité",
+        "Paramètres": "Paramètres",
+        "Supprimer": "Supprimer",
+        "Sauvegarder": "Sauvegarder",
+        "Sauvegarde effectuée avec succès": "Sauvegarde effectuée avec succès",
+        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>"
+    },
+    "plugins\/ipx800\/desktop\/modal\/ipx800.configpush.php": {
+        "Information générale": "Information générale",
         "IP de Jeedom": "IP de Jeedom",
-        "Chemin web": "Camino web",
-        "Relai": "Relé",
-        "Relai X800 1": "Relé X800 1",
-        "Relai X800 2": "Relé X800 2",
-        "Relai X800 3": "Relé X800 3",
-        "Entrée numérique": "Entrada digital",
-        "Entrée numérique X800 1": "Entrada numérica X800 1",
-        "Entrée numérique X800 2": "Entrada numérica X800 2",
-        "Entrée numérique X800 3": "Entrada numérica X800 3",
-        "Appliquer": "Aplicar",
-        "Tout décocher": "Deseleccionar todo",
-        "Tout cocher": "Seleccionar todo"
+        "Chemin web": "Chemin web",
+        "Relai": "Relai",
+        "Relai X800 1": "Relai X800 1",
+        "Relai X800 2": "Relai X800 2",
+        "Relai X800 3": "Relai X800 3",
+        "Entrée numérique": "Entrée numérique",
+        "Entrée numérique X800 1": "Entrée numérique X800 1",
+        "Entrée numérique X800 2": "Entrée numérique X800 2",
+        "Entrée numérique X800 3": "Entrée numérique X800 3",
+        "Appliquer": "Appliquer",
+        "Tout décocher": "Tout décocher",
+        "Tout cocher": "Tout cocher"
     },
-    "plugins/ipx800/desktop/js/ipx800.js": {
-        "Nom": "Nombre",
-        "Calcul": "Calculo",
-        "Rechercher équipement": "Buscar dispositivo",
-        "Formule standard": "Fórmula estándar",
-        "Unite": "Unidad",
+    "plugins\/ipx800\/desktop\/js\/ipx800.js": {
+        "Nom": "Nom",
+        "Calcul": "Calcul",
+        "Rechercher équipement": "Rechercher équipement",
+        "Formule standard": "Formule standard",
+        "Unite": "Unite",
         "Min": "Min",
         "Max": "Max",
-        "Historiser": "Guardar historial",
-        "Afficher": "Mostrar",
-        "Inverser": "Invertir",
-        "Correction Min Auto": "Corrección Min Auto",
-        "Correction Max Auto": "Corrección Max Auto",
-        "Tester": "Probar",
-        "Configurer l'IPX pour avoir le retour des etats": "Configurar el IPX para tener el retorno de los estados",
-        "Accèder à l'interface de l'IPX": "Acceder a la interfaz de la IPX",
-        "Application de la configuration Push correcte": "Aplicacion de la configuración Push correcta"
+        "Historiser": "Historiser",
+        "Afficher": "Afficher",
+        "Inverser": "Inverser",
+        "Correction Min Auto": "Correction Min Auto",
+        "Correction Max Auto": "Correction Max Auto",
+        "Tester": "Tester",
+        "Configurer l'IPX pour avoir le retour des etats": "Configurer l'IPX pour avoir le retour des etats",
+        "Accèder à l'interface de l'IPX": "Accèder à l'interface de l'IPX",
+        "Application de la configuration Push correcte": "Application de la configuration Push correcte"
     }
 }
