[ROBOT] Action all

--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -1,57 +1,57 @@
 {
     "plugins\/ipx800\/desktop\/php\/ipx800_analogique.php": {
-        "Général": "Général",
+        "Général": "Allgemein",
         "Nom de l'entrée analogique": "Nom de l'entrée analogique",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
-        "Visible": "Visible",
+        "Objet parent": "Elternobjekt",
+        "Aucun": "Keine",
+        "Catégorie": "Kategorie",
+        "Activer": "Aktivieren",
+        "Visible": "Sichtbar",
         "Indicateurs": "Indicateurs",
-        "Nom": "Nom",
+        "Nom": "Name",
         "Sous-Type": "Sous-Type",
-        "Valeur": "Valeur",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
-        "Sauvegarder": "Sauvegarder"
+        "Valeur": "Wert",
+        "Unité": "Einheit",
+        "Paramètres": "Parameter",
+        "Sauvegarder": "Speichern"
     },
     "plugins\/ipx800\/desktop\/php\/ipx800_bouton.php": {
-        "Général": "Général",
+        "Général": "Allgemein",
         "Nom de l'entrée numérique": "Nom de l'entrée numérique",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
-        "Visible": "Visible",
+        "Objet parent": "Elternobjekt",
+        "Aucun": "Keine",
+        "Catégorie": "Kategorie",
+        "Activer": "Aktivieren",
+        "Visible": "Sichtbar",
         "Indicateurs": "Indicateurs",
-        "Nom": "Nom",
+        "Nom": "Name",
         "Sous-Type": "Sous-Type",
-        "Valeur": "Valeur",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
-        "Sauvegarder": "Sauvegarder"
+        "Valeur": "Wert",
+        "Unité": "Einheit",
+        "Paramètres": "Parameter",
+        "Sauvegarder": "Speichern"
     },
     "plugins\/ipx800\/desktop\/php\/ipx800_relai.php": {
-        "Général": "Général",
+        "Général": "Allgemein",
         "Nom du relai": "Nom du relai",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
-        "Visible": "Visible",
+        "Objet parent": "Elternobjekt",
+        "Aucun": "Keine",
+        "Catégorie": "Kategorie",
+        "Activer": "Aktivieren",
+        "Visible": "Sichtbar",
         "Indicateurs": "Indicateurs",
-        "Nom": "Nom",
+        "Nom": "Name",
         "Sous-Type": "Sous-Type",
-        "Valeur": "Valeur",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
-        "Sauvegarder": "Sauvegarder"
+        "Valeur": "Wert",
+        "Unité": "Einheit",
+        "Paramètres": "Parameter",
+        "Sauvegarder": "Speichern"
     },
     "plugins\/ipx800\/desktop\/php\/ipx800_compteur.php": {
-        "Général": "Général",
+        "Général": "Allgemein",
         "Nom du compteur": "Nom du compteur",
         "Nom de l'entrée numérique": "Nom de l'entrée numérique",
-        "Objet parent": "Objet parent",
+        "Objet parent": "Elternobjekt",
         "Aucun": "Aucun",
         "Catégorie": "Catégorie",
         "Activer": "Activer",
